--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,46 +1,59 @@
 name: "WebGoat-Maven"
 on:
-    pull_request:
-        paths-ignore:
-            - '.txt'
-            - 'LICENSE'
-            - 'docs/**'
-        branches: [main]
     push:
         branches:
+            - "**"
+    pull_request:
+        types:
+            - closed
+        branches:
             - main
+    workflow_dispatch:
 
 jobs:
-    build:
-        runs-on: ${{ matrix.os }}
-        strategy:
-            matrix:
-                os: [ ubuntu-latest, windows-latest, macos-latest ]
+    mvn-build-and-publish:
+        runs-on: ubuntu-latest
+        env:
+            BUILD_NAME: 'maven-webgoat'
+            JFROG_BUILD_STATUS: PASS
         steps:
-            -   uses: actions/checkout@v4.1.6
-            -   name: Set up JDK 21
-                uses: actions/setup-java@v4.2.1
-                with:
-                    distribution: 'temurin'
-                    java-version: 21
-                    architecture: x64
-            -   name: Cache Maven packages
-                uses: actions/cache@v4.0.2
-                with:
-                    path: ~/.m2
-                    key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                    restore-keys: ${{ runner.os }}-m2-
-            -   name: Build with Maven
-                run: |
-                    if [ "$RUNNER_OS" == "macOS" ]; then
-                        # Make "localhost" DNS entry available; see https://github.com/actions/runner-images/issues/6383
-                        # sudo networksetup -setdnsservers Ethernet 9.9.9.9
-                        echo -e "$(ipconfig getifaddr en0) $(hostname -f) $(hostname -s)" | sudo tee -a /etc/hosts
-                        echo `sudo lsof -PiTCP -sTCP:LISTEN`
-                        cat /etc/hosts
-                        mvn --no-transfer-progress verify -DskipTests -DwaittimeForServerStart=150
-                        # skip tests on macos, takes too long with the current runners
-                    else
-                        mvn --no-transfer-progress verify -DwaittimeForServerStart=30
-                    fi
-                shell: bash
+            - name: Checkout
+              uses: actions/checkout@v4
+            - name: JFrog CLI setup 🐸
+              uses: jfrog/setup-jfrog-cli@v4
+              env:
+                  JF_URL: ${{ secrets.JF_URL }}
+                  JF_ACCESS_TOKEN: ${{secrets.JF_ACCESS_TOKEN}}
+                  JF_GIT_TOKEN: ${{ secrets.JF_GIT_TOKEN }}
+            - name: Health check JFrog Artifactory instance 🐸
+              run: |
+                  jf --version
+                  jf rt ping
+                  # jf config show
+            - name: Build Maven Package
+              run: |
+                  jf mvnc --repo-resolve-releases=demo-libs-release --repo-resolve-snapshots=demo-libs-snapshot --repo-deploy-releases=demo-libs-release --repo-deploy-snapshots=demo-libs-snapshot
+                  jf mvn clean install -f pom.xml -Dmaven.test.skip=true -Dartifactory.publish.artifacts=true --build-name ${{env.BUILD_NAME}} --build-number ${{github.run_number}}
+            - name: Login to JFrog Docker repo
+              uses: docker/login-action@v3
+              with:
+                  registry: ${{ secrets.JF_URL }}
+                  JF_ACCESS_TOKEN: ${{secrets.JF_ACCESS_TOKEN}}
+            - name: Docker Build 🐳🐸 and scan
+              run: |
+                  jf docker build . -t avitrial.jfrog.io/demo-libs-release/webgoat-maven:${{github.run_number}}
+                  jf docker scan avitrial.jfrog.io/demo-libs-release/webgoat-maven:${{github.run_number}}
+                  jf docker push avitrial.jfrog.io/demo-libs-release/webgoat-maven:${{github.run_number}}
+            - name: Audit
+              run: |
+                  jf audit
+            - name: Publish build build-info
+              run: |
+                  # Collect and store environment variables in the build-info
+                  jf rt bce ${{env.BUILD_NAME}} ${{github.run_number}}
+                  # Collect and store VCS details in the build-info
+                  jf rt bag ${{env.BUILD_NAME}} ${{github.run_number}}
+                  # Publish the build-info to Artifactory
+                  jf rt bp ${{env.BUILD_NAME}} ${{github.run_number}}
+                  # Scan the published build-info with Xray
+                  jf rt bs ${{env.BUILD_NAME}} ${{github.run_number}}
