--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,12 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+            - name: Set up JDK 21
+              uses: actions/setup-java@v4.2.1
+              with:
+                   distribution: 'temurin'
+                   java-version: 21
+                   architecture: x64
             - name: JFrog CLI setup 🐸
               uses: jfrog/setup-jfrog-cli@v4
               env:
