--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,7 +44,8 @@ jobs:
               uses: docker/login-action@v3
               with:
                   registry: ${{ secrets.JF_URL }}
-                  JF_ACCESS_TOKEN: ${{secrets.JF_ACCESS_TOKEN}}
+                  username: ${{secrets.DOCKER_USERNAME}}
+                  password: ${{secrets.JF_ACCESS_TOKEN}}
             - name: Docker Build 🐳🐸 and scan
               run: |
                   jf docker build . -t avitrial.jfrog.io/demo-libs-release/webgoat-maven:${{github.run_number}}
