--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
     mvn-build-and-publish:
         runs-on: ubuntu-latest
         env:
-            BUILD_NAME: 'maven-webgoat'
+            BUILD_NAME: 'webgoat-app'
             JFROG_BUILD_STATUS: PASS
         steps:
             - name: Checkout
