--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,9 @@ on:
             - main
     workflow_dispatch:
 
+permissions:
+    id-token: write # This is required for requesting the JWT
+
 jobs:
     mvn-build-and-publish:
         runs-on: ubuntu-latest
@@ -29,8 +32,11 @@ jobs:
               uses: jfrog/setup-jfrog-cli@v4
               env:
                   JF_URL: ${{ secrets.JF_URL }}
-                  JF_ACCESS_TOKEN: ${{secrets.JF_ACCESS_TOKEN}}
+                  #JF_ACCESS_TOKEN: ${{secrets.JF_ACCESS_TOKEN}}
                   JF_GIT_TOKEN: ${{ secrets.JF_GIT_TOKEN }}
+              with:
+                    oidc-provider-name: avi-github
+                    version: latest
             - name: Health check JFrog Artifactory instance 🐸
               run: |
                   jf --version
@@ -38,19 +44,19 @@ jobs:
                   # jf config show
             - name: Build Maven Package
               run: |
-                  jf mvnc --repo-resolve-releases=demo-libs-release --repo-resolve-snapshots=demo-libs-snapshot --repo-deploy-releases=demo-libs-release --repo-deploy-snapshots=demo-libs-snapshot
+                  jf mvnc --repo-resolve-releases=avi-mvn-dev-virtual --repo-resolve-snapshots=avi-mvn-dev-virtual --repo-deploy-releases=avi-mvn-dev-virtual --repo-deploy-snapshots=avi-mvn-dev-virtual
                   jf mvn clean install -f pom.xml -Dmaven.test.skip=true -Dartifactory.publish.artifacts=true --build-name ${{env.BUILD_NAME}} --build-number ${{github.run_number}}
-            - name: Login to JFrog Docker repo
-              uses: docker/login-action@v3
-              with:
-                  registry: ${{ secrets.JF_URL }}
-                  username: ${{secrets.DOCKER_USERNAME}}
-                  password: ${{secrets.JF_ACCESS_TOKEN}}
+           # - name: Login to JFrog Docker repo
+            #  uses: docker/login-action@v3
+             # with:
+              #    registry: ${{ secrets.JF_URL }}
+               #   username: ${{secrets.DOCKER_USERNAME}}
+                #  password: ${{secrets.JF_ACCESS_TOKEN}}
             - name: Docker Build 🐳🐸 and scan
               run: |
-                  jf docker build . -t avitrial.jfrog.io/demo-docker/webgoat-maven:${{github.run_number}}
-                  jf docker scan avitrial.jfrog.io/demo-docker/webgoat-maven:${{github.run_number}}
-                  jf docker push avitrial.jfrog.io/demo-docker/webgoat-maven:${{github.run_number}}
+                  jf docker build . -t soleng.jfrog.io/avi-docker-virtual/webgoat-maven:${{github.run_number}}
+                  jf docker scan soleng.jfrog.io/avi-docker-virtual/webgoat-maven:${{github.run_number}}
+                  jf docker push soleng.jfrog.io/avi-docker-virtual/webgoat-maven:${{github.run_number}}
             #- name: Audit
              # run: |
               #    jf audit
