--- a/.github/workflows/frogbot-pr.yml
+++ b/.github/workflows/frogbot-pr.yml
@@ -5,6 +5,7 @@ on:
 permissions:
   pull-requests: write
   contents: read
+  id-token: write
 jobs:
   scan-pull-request:
     runs-on: ubuntu-latest
@@ -22,7 +23,7 @@ jobs:
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
-          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+          #JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
           JFROG_CLI_LOG_LEVEL: "DEBUG"
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
@@ -145,3 +146,6 @@ jobs:
         # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
         #with:
             #oidc-provider-name: frogbot-integration
+        with:
+            oidc-provider-name: avi-github
+            version: latest
