--- a/.github/workflows/frogbot.yml
+++ b/.github/workflows/frogbot.yml
@@ -9,7 +9,7 @@ permissions:
   pull-requests: write
   security-events: write
   # [Mandatory If using OIDC authentication protocol instead of JF_ACCESS_TOKEN]
-  #id-token: write
+  id-token: write
 jobs:
   scan-repository:
     runs-on: ubuntu-latest
@@ -27,7 +27,7 @@ jobs:
 
           # [Mandatory if JF_USER and JF_PASSWORD are not provided]
           # JFrog access token with 'read' permissions on Xray service
-          JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
+          #JF_ACCESS_TOKEN: ${{ secrets.JF_ACCESS_TOKEN }}
           JFROG_CLI_LOG_LEVEL: "DEBUG"
 
           # [Mandatory if JF_ACCESS_TOKEN is not provided]
@@ -149,3 +149,6 @@ jobs:
         # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
         #with:
             #oidc-provider-name: frogbot-integration
+        with:
+            oidc-provider-name: avi-github
+            version: latest
