--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,4 +69,4 @@ jobs:
                   # Publish the build-info to Artifactory
                   jf rt bp ${{env.BUILD_NAME}} ${{github.run_number}} --project=${{secrets.PROJECT_KEY}}
                   # Scan the published build-info with Xray
-                  jf rt bs ${{env.BUILD_NAME}} ${{github.run_number}}
+                  jf bs ${{env.BUILD_NAME}} ${{github.run_number}} bs --fail=false
