Add delay for 1 min before scan

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,5 +69,6 @@ jobs:
                   jf rt bag
                   # Publish the build-info to Artifactory
                   jf rt bp
+                  sleep 60s
                   # Scan the published build-info with Xray
                   jf bs --fail=false
