--- a/.github/workflows/frogbot-scan.yml
+++ b/.github/workflows/frogbot-scan.yml
@@ -75,11 +75,11 @@ jobs:
 
           # [Optional, default: "."]
           # Relative path to the root of the project in the Git repository. If left empty (without providing "." yourself as default), a recursive scan is triggered from the root directory of the project.
-          # JF_WORKING_DIR: path/to/project/dir
+          JF_WORKING_DIR: .
 
           # [Default: "*git*;*node_modules*;*target*;*venv*;*test*"]
           # List of exclusion patterns (utilizing wildcards) for excluding paths in the source code of the Git repository during SCA scans.
-          # JF_PATH_EXCLUSIONS: "*git*;*node_modules*;*target*;*venv*;*test*"
+          JF_PATH_EXCLUSIONS: "*git*;*node_modules*;*target*;*venv*;*test*"
 
           # [Optional]
           # Xray Watches. Learn more about them here: https://www.jfrog.com/confluence/display/JFROG/Configuring+Xray+Watches
@@ -91,7 +91,7 @@ jobs:
 
           # [Optional, default: "TRUE"]
           # Fails the Frogbot task if any security issue is found.
-          # JF_FAIL: "FALSE"
+          JF_FAIL: "FALSE"
 
           # [Optional]
           # Frogbot will download the project dependencies, if they're not cached locally. To download the
@@ -151,6 +151,3 @@ jobs:
         # Insert to oidc-provider-name the 'Provider Name' defined in the OIDC integration configured in the JPD
         #with:
             #oidc-provider-name: frogbot-integration
-      - name: Set Maven Config
-        run : |
-            jf mvnc --repo-resolve-releases=avi-mvn-dev-virtual --repo-resolve-snapshots=avi-mvn-dev-virtual --repo-deploy-releases=avi-mvn-dev-virtual --repo-deploy-snapshots=avi-mvn-dev-virtual
